# openscad-library-manager

./: .gitignore  LICENSE  README.md
.github/: dependabot.yaml
.github/workflows/: generate_index.yml  parse-pr.yml
docker/base/: Dockerfile
docker/base-20.04/: Dockerfile
docker/pyinstaller/: Dockerfile  olman.py
index_generator/: index_generator.py  model.py  utils.py
index_generator/sample_generator_inputs/: accepted_repositories_list.txt
manifest_schema/: manifest.toml
olman-cli/: main.py  pyproject.toml
olman-cli/olman_cli/: __main__.py  info.py  install.py  remove.py  search.py  update.py  utils.py
olman-client/: olman.puml  pyproject.toml
olman-client-old/: requirements.txt
olman-client/olman_client/: __init__.py  api.py  graph.py  install_manager.py  state.py  utils.py
olman-client/olman_client/files/: platform.py
olman-client/olman_client/internal/: local_index.py  remote_index.py
olman-models/: pyproject.toml
olman-models/examples/: manifest.toml
olman-models/olman_models/: __init__.py  models.py
olman-remote/: index_generator.py  pr_parser.py  pyproject.toml
olman-remote/samples/: diff_file2.diff  diff_file3.diff  diff_file4.diff  list_file.txt
olman-vcs-utils/: pyproject.toml
olman-vcs-utils/olman_vcs_utils/: __init__.py  vcs_utils.py
olman-version-utils/: pyproject.toml
olman_client/: install_manager.py
olman_client/olman/: api.py  model.py  (+2 more)
output_files/: accepted_repositories.txt  index_file.json  list_file.txt  remote_index.json
pr_parser/: pr_submission_parser.py  requirements.txt
snap/: snapcraft.yaml
(+5 files in other folders)
